feat: add documentation show opening by id
